# Inhouse_QtOpenGL

./: .gitignore  CMakeLists.txt  README.md
1_OpenGLWindow/: CMakeLists.txt  OpenGLWindow.cpp
examples/opengl/cube/: CMakeLists.txt  mainwidget.cpp
examples/vulkan/hellovulkancubes/: CMakeLists.txt  mesh.cpp  renderer.cpp  shader.cpp
practice/1_OpenGLWindow/: CMakeLists.txt  POpenGLWindow.cpp  POpenGLWindow.h  PTriangleWindow.cpp  PTriangleWindow.h  main.cpp
practice/2_VAOAndTexture/: CMakeLists.txt  PMainWidget.cpp  PMainWidget.h  PPlaneWidget.cpp  PPlaneWidget.h  PTriangleWidget.cpp  PTriangleWidget.h  Plane.fs.glsl  main.cpp
src/: CMakeLists.txt
src/10_IBL_Irradiance/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/11_ShadowMapping/: CMakeLists.txt
src/11_ShadowMapping/PCF/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/11_ShadowMapping/PCSS/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/12_WorldGrid/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/12_WorldGrid/Shaders/: WorldGrid.fs.glsl  WorldGrid.vs.glsl
src/13_PrecomputeRadianceTransfer/: CMakeLists.txt  Note.txt
src/13_PrecomputeRadianceTransfer/PRT/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/13_PrecomputeRadianceTransfer/PRT_UnShadow/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/13_PrecomputeRadianceTransfer/Shaders/: prt.fs.glsl  prt.vs.glsl
src/13_PrecomputeRadianceTransfer/Utility/: BVHTree.cpp  BVHTree.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  DiffuseObject.cpp  DiffuseObject.h  Lighting.cpp  Lighting.h  Object.cpp  Object.h  SHRotation.cpp  SHRotation.h  Sampler.cpp  Sampler.h  SphericalHarmonics.h  utils.h
src/14_IBL_Specular/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/14_IBL_Specular/shaders/: background.vs.glsl  pbr.fs.glsl
src/15_IBL_Specular_texture/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/15_IBL_Specular_texture/shaders/: background.fs.glsl  brdf.fs.glsl  pbr.fs.glsl  pbr.vs.glsl
src/16_IBL_Models/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/16_IBL_Models/shaders/: irradiance_convolution.fs.glsl
src/17_ScreenSpaceAmbientOcclusion/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp
src/17_ScreenSpaceAmbientOcclusion/Shaders/: ssao.fs.glsl  ssao.vs.glsl  ssaoBlur.fs.glsl  ssaoGeometry.fs.glsl  ssaoGeometry.vs.glsl  ssaoLighting.fs.glsl  ssaoMultiSample.fs.glsl
src/18_ScreenSpaceReflection/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp
src/19_TheKullayContyApproximation/: CMakeLists.txt  Eavg.cpp  GLWidget.cpp  GLWidget.h  README.md  main.cpp
src/19_TheKullayContyApproximation/Shaders/: equirectangular_to_map.fs.glsl  multipleScatterPBR.fs.glsl  multipleScatterPBR_Aguera.fs.glsl  multipleScatterPBR_KullaContySliders.glsl  prefilter.fs.glsl  singleScatterPBR.fs.glsl
src/1_OpenGLWindow/: CMakeLists.txt  OpenGLWindow.cpp  OpenGLWindow.h  main.cpp
src/20_SkeletalAnimation/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp
src/20_SkeletalAnimation/doc/: FBXCondition.xmind  Skeletal Animation Summary.xmind
src/20_SkeletalAnimation/resource/: testBlendShape.fbx  testBlendShape.ma  testBlendShapePart.fbx  testBlendShapePart.ma  testBlendShapeTrans.fbx  testBlendShapeTrans.ma  testUDIM.fbx  testUDIM.ma
src/20_SkeletalAnimation/shaders/: blendShape.fs.glsl  blendShape.vs.glsl  skeletalAnimation.fs.glsl  skeletalAnimation.vs.glsl
src/21_PointCacheAnimation/: CMakeLists.txt  Helix.abc  README.md  helix.fs.glsl  helix.vs.glsl  main.cpp
src/22_UDIM/: CMakeLists.txt  main.cpp  udim.vs.glsl
src/23_ReadusdWithTBB/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp  myTimer.h  usdParser.cpp  usdParser.h
src/23_ReadusdWithTBB/Shaders/: pbr.fs.glsl  pbr.vs.glsl  usdGeometry.fs.glsl  usdGeometry.vs.glsl
src/24_ObjectSelection/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp
src/24_ObjectSelection/Shaders/: outline.fs.glsl  selectedObject.fs.glsl
src/25_QMLScreenshotExample/: CMakeLists.txt  CaptureWindow.cpp  CaptureWindow.h  main.cpp
src/25_QMLScreenshotExample/QML/: ColorSlider.qml  ToolBarButton.qml  TopBarButton.qml  painterWidget.qml
src/26_MLAAExample/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp
src/26_MLAAExample/Shaders/: MLAA_BlendWeightPS.fs.glsl  (+5 more)
src/26_ReadusdWithWireframe/: CMakeLists.txt  GLWidget.cpp  main.cpp  usdParser.cpp  usdParser.h
src/27_QMLTimeline/: main.py
src/28_RenderLibrary/: CMakeLists.txt  MurrayRenderer.cpp  MurrayRenderer.h
src/29_OpenSubdivision/: CMakeLists.txt  main.cpp  shape.cpp  simple_math.h  types.h  vertex.h  viewer.cpp  viewer.h
src/2_OpenGLWidget/: CMakeLists.txt  Plane.vs.glsl  main.cpp  mainwidget.cpp  mainwidget.h
src/3_OpenGLVAOAndTexture/: CMakeLists.txt  Note.txt  Plane.vs.glsl  main.cpp  mainwidget.cpp  mainwidget.h
src/4_OpenGLCamera/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/5_CubeMap/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/6_Framebuffer/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/7_Models/: CMakeLists.txt  mainwidget.cpp  mainwidget.h
src/8_NormalMap/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/9_PBRLight/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/Helper/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AxisSystem.cpp  AxisSystem.h  Bone.h  Camera.cpp  Camera.h  CubeGeometry.cpp  CubeGeometry.h  CustomGeometry.cpp  CustomGeometry.h  FloorGeometry.cpp  FloorGeometry.h  Geometry.cpp  Geometry.h  GridGeometry.cpp  GridGeometry.h  RectangleGeometry.cpp  RectangleGeometry.h  SkyboxGeometry.cpp  SkyboxGeometry.h  SphereGeometry.cpp  SphereGeometry.h
src/Qt6Demo/: CMakeLists.txt
src/Shaders/: Axis.fs.glsl  Axis.vs.glsl  Cube.fs.glsl  Cube.vs.glsl  CubeMap.vs.glsl  CustomGeometry.vs.glsl  IrradianceConvolution.fs.glsl  NormalMapping.fs.glsl  NormalMapping.vs.glsl  PBRIrradiance.fs.glsl  PBRSphere.fs.glsl  PBRSphere.vs.glsl  Plane.fs.glsl  ScreenPlane.fs.glsl  SkySphere.fs.glsl  SkySphere.vs.glsl  Skybox.fs.glsl  Skybox.vs.glsl
(+143 files in other folders)
