#add_subdirectory(1_OpenGLWindow)
#add_subdirectory(2_OpenGLWidget)
#add_subdirectory(3_OpenGLVAOAndTexture)
#add_subdirectory(4_OpenGLCamera)
#add_subdirectory(5_CubeMap)
#add_subdirectory(6_Framebuffer)
#add_subdirectory(7_Models)
#add_subdirectory(8_NormalMap)
#add_subdirectory(9_PBRLight)
#add_subdirectory(10_IBL_Irradiance)
#add_subdirectory(11_ShadowMapping)
#add_subdirectory(12_WorldGrid)
add_subdirectory(13_PrecomputeRadianceTransfer)